 * Closed GH-112: Improved some of pplacer's error messages.
 * Closed GH-116: Added --keep-at-most and --keep-factor flags to pplacer.
 * Closed GH-117: Added the output of `git describe` to --version output.
 * Closed GH-119: Added a `rppr reroot` subcommand.
 * Closed GH-120: Added a --rank-limit flag to `rppr convexify`.
 * Closed GH-122: Renamed `rppr taxtable` to `rppr prep_db`.
 * Closed GH-129: Added the ability for `rppr convexify` to convexify a tree
   not in a reference package.


1.1.alpha08
===========

 * Closed GH-46: Added a --timing flag to pplacer to show where time was spent
   during placements.
 * Closed GH-47: Added unit tests for gaussian kr distance.
 * Closed GH-49: Added a more informative error message to pplacer if reference
   sequences occur multiple times in a query file.
 * Closed GH-52: Fixed padding in `guppy squash`.
 * Closed GH-58: Improved navigation for the documentation on guppy commands.
 * Closed GH-59: Improved documentation for guppy commands using sqlite.
 * Closed GH-60: Improved documentation for `guppy classify`.
 * Closed GH-65: Released alpha08.
 * Closed GH-66: Added a FAQ to the documentation.
 * Closed GH-68: Changed `guppy info` to show multiplicity.
 * Closed GH-69: Changed `guppy tog` to use polytomy instead of a _ delimiter
   joining sequence names.
 * Closed GH-70: Added documentation for how to compile pplacer.
 * Closed GH-73: Added a pre-masking feature to cut out irrelevant columns of
   the alignment.
 * Closed GH-74: Improved how pplacer dedupes sequences before a placerun.
 * Added a script to sort placefiles for easier visual diffs.
 * Added more informative error messages when the length of the query alignment
   and reference alignment don't match.
 * `guppy edpl` now calculates the EDPL (expected distance between placement
   locations) for placements


1.1.alpha07
===========

 * Fixed a serious issue with any command that used a `--prefix` flag.


1.1.alpha06
===========
