@@ -14,7 +14,7 @@ let avg l = (List.reduce (+.) l) /. (List.length l |> float_of_int)
 
 (* This function returns a map from the internal nodes i to the average distance
  * from the midpoint of edge i to the leaves below i. *)
-let exp_prior_map t =
+let midpoint_leaf_dist_map t =
   let bl = Gtree.get_bl t in
   let rec aux = function
     | Stree.Leaf i -> IntMap.singleton i (bl i /. 2.), [bl i]
