@@ -397,7 +397,7 @@ let run_file prefs query_fname =
   let prior =
     if Prefs.uniform_prior prefs then Core.Uniform_prior
     else if Prefs.informative_prior prefs then
-      Core.Informative_exp_prior (Core.exp_prior_map ref_tree)
+      Core.Informative_exp_prior (Core.midpoint_leaf_dist_map ref_tree)
     else Core.Flat_exp_prior
       (* exponential with mean = average branch length *)
       ((Gtree.tree_length ref_tree) /.
