@@ -40,6 +40,7 @@
  * Closed GH-119: Added a `rppr reroot` subcommand.
  * Closed GH-120: Added a --rank-limit flag to `rppr convexify`.
  * Closed GH-122: Renamed `rppr taxtable` to `rppr prep_db`.
+ * Closed GH-128: Added informative priors to pplacer integration.
  * Closed GH-129: Added the ability for `rppr convexify` to convexify a tree
    not in a reference package.
 
